[package]
name = "message-meta"
description = "String (message) parser. Parsing tokens like links or hashtags"
keywords = ["message", "parser", "link", "hashtag", "meta"]
license = "MIT"
version = "0.2.0"
authors = ["Jakub Westfalewski <j.westfalewski@gmail.com>"]
repository = "https://github.com/jwest/message-meta"
edition = "2018"

[dependencies]
regex = "1.1.0"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
proptest = "0.9.1"